--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,8 @@ jobs:
 
       - name: Prepara artefato de deploy
         run: |
-          zip -rq ${{ env.ARTIFACT_FILE }} .ebextensions build Procfile
+          zip -rq ${{ env.ARTIFACT_FILE }} build Procfile
+#          zip -rq ${{ env.ARTIFACT_FILE }} .ebextensions build Procfile
 
       - name: Lista o conteúdo deploy
         run: |
