--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,8 +10,8 @@ on:
 env:
   AWS_REGION: sa-east-1
   ARTIFACT_FILE: deploy.zip
-  ARTIFACT_PATH: artifact/cep-api/
-  ARTIFACT_FULL_PATH: artifact/cep-api/deploy.zip
+  ARTIFACT_PATH: artifact/cep-acl/
+  ARTIFACT_FULL_PATH: artifact/cep-acl/deploy.zip
 
 jobs:
   build:
