--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     // AWS
     implementation platform('software.amazon.awssdk:bom:2.25.1')
 
-    // Jakart
+    // Jakarta
     implementation 'jakarta.ws.rs:jakarta.ws.rs-api:3.1.0'
 
     // Webflux
@@ -43,6 +43,7 @@ dependencies {
     // Test dependencies
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'software.amazon.awssdk:apache-client'
+    testImplementation 'org.mockito:mockito-inline:5.2.0'
 
     //Geral
     implementation 'org.glassfish.jersey.core:jersey-common:3.1.10'
@@ -52,11 +53,14 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    jvmArgs "-javaagent:${configurations.testRuntimeClasspath.find { it.name.contains('mockito-core') }}", '-Xshare:off'
+
     systemProperty 'spring.profiles.active', 'local'
 
     testLogging {
         events "passed", "skipped", "failed"
     }
+
     finalizedBy jacocoTestReport
 }
 
