--- a/.ebextensions/environmentvariables.config
+++ b/.ebextensions/environmentvariables.config
@@ -1,4 +1,4 @@
 option_settings:
   aws:elasticbeanstalk:application:environment:
-    AWS_ACCESS_KEY_ID: '{{resolve:secretsmanager:aws-service-secret:AccessKeyId}}'
-    AWS_SECRET_ACCESS_KEY: '{{resolve:secretsmanager:aws-service-secret:SecretAccessKey}}'
+    AWS_ACCESS_KEY_ID: '{{resolve:ssm:keypair}}'
+    AWS_SECRET_ACCESS_KEY: '{{resolve:ssm:secretkeypair}}'
