--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,8 @@ jobs:
         uses: gradle/actions/setup-gradle@v4
 
       - name: Compilação
+        env:
+          SPRING_PROFILES_ACTIVE: dev
         run: ./gradlew build
 
       - name: Prepara artefato de deploy
