--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,6 @@ server:
 spring:
   application:
     name: cep-acl
-  devtools.restart.additional-exclude: "software.amazon.awssdk.**"
 
 springdoc:
   api-docs:
@@ -29,3 +28,5 @@ spring:
 
 aws:
   endpoint: http://localhost:4566
+  accessKeyId: dummy
+  secretKey: dummy
