--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,8 @@ test {
     useJUnitPlatform()
     jvmArgs "-javaagent:${configurations.testRuntimeClasspath.find { it.name.contains('mockito-core') }}", '-Xshare:off'
 
+    systemProperty 'spring.profiles.active', 'test'
+
     testLogging {
         events "passed", "skipped", "failed"
     }
