--- a/build.gradle
+++ b/build.gradle
@@ -53,13 +53,17 @@ dependencies {
 
 test {
     useJUnitPlatform()
-    jvmArgs "-javaagent:${configurations.testRuntimeClasspath.find { it.name.contains('mockito-core') }}", '-Xshare:off'
 
     systemProperty 'spring.profiles.active', 'test'
 
     testLogging {
         events "passed", "skipped", "failed"
+        exceptionFormat "full"
     }
+
+    maxHeapSize = '1G'
+
+    jvmArgs "-javaagent:${configurations.testRuntimeClasspath.find { it.name.contains('mockito-core') }}", '-Xshare:off'
 
     finalizedBy jacocoTestReport
 }
@@ -130,6 +134,5 @@ tasks.register('checkCoverage') {
 }
 
 bootJar {
-    version = ''
-    archiveClassifier = ''
+    archiveFileName = 'spring-run.jar'
 }
