--- a/.github/workflows/deploy-aws-elasticbeanstalk.yml
+++ b/.github/workflows/deploy-aws-elasticbeanstalk.yml
@@ -1,60 +1,26 @@
-name: Build and Deploy to AWS Elastic Beanstalk
+# Deploy to AWS Elastic Beanstalk
+name: Deploy AWS_EB
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-  workflow_dispatch:
+  workflow_run:
+    workflows: [ "Build" ]
+    types:
+      - completed
 
 env:
   AWS_REGION: sa-east-1
   ARTIFACT_FILE: deploy.zip
   ARTIFACT_PATH: artifact/cep-acl/
   ARTIFACT_FULL_PATH: artifact/cep-acl/deploy.zip
+  VERSION_LABEL: ${{ github.sha }}
+  ELASTIC_BEANSTALK_NAME: DesafioCep
+  ELASTIC_BEANSTALK_ENV_NAME: DesafioCep-env
+  ELASTIC_BEANSTALK: elasticbeanstalk-sa-east-1-${{ secrets.AWS_ACCOUNT_ID }}
 
 jobs:
-  build:
+  deploy-aws-eb:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Prepara JDK 21
-        uses: actions/setup-java@v4
-        with:
-          java-version: 21
-          distribution: temurin
-          cache: gradle
-
-      - name: Prepara Gradle
-        uses: gradle/actions/setup-gradle@v4
-
-      - name: Compilação
-        run: ./gradlew clean build
-
-      - name: Prepara artefato de deploy
-        run: |
-          zip -rq ${{ env.ARTIFACT_FILE }} .ebextensions build Procfile
-
-      - name: Lista o conteúdo deploy
-        run: |
-          ls -1 ${{ env.ARTIFACT_FILE }}
-
-      - name: Upload do artefato
-        uses: actions/upload-artifact@v4
-        with:
-          name: deploy
-          path: ${{ env.ARTIFACT_FILE }}
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-
-    env:
-      VERSION_LABEL: ${{ github.sha }}
-      ELASTIC_BEANSTALK_NAME: DesafioCep
-      ELASTIC_BEANSTALK_ENV_NAME: DesafioCep-env
-      ELASTIC_BEANSTALK: elasticbeanstalk-sa-east-1-${{ secrets.AWS_ACCOUNT_ID }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.head_branch == 'aws' }}
 
     steps:
       - name: Download do artefato
