--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,26 @@
+buildscript {
+    ext {
+        springBootVersion = '3.4.5'
+        springDependencyManagementVersion = '1.1.7'
+        awsSdkVersion = '2.25.1'
+        dynamodbVersion = '2.31.30'
+        mapstructVersion = '1.6.3'
+        jerseyVersion = '3.1.10'
+        reactorNettyVersion = '1.3.0-M2'
+        checkstyleVersion = '10.12.4'
+        jacocoVersion = '0.8.13'
+        mockitoVersion = '5.2.0'
+        springDocVersion = '2.8.6'
+        jakartaWsVersion = '3.1.0'
+        finalJarName = 'spring-run.jar'
+    }
+}
+
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.4.5'
-    id 'io.spring.dependency-management' version '1.1.7'
+    id 'org.springframework.boot' version "${springBootVersion}"
+    id 'io.spring.dependency-management' version "${springDependencyManagementVersion}"
+    id 'checkstyle'
     id 'jacoco'
 }
 
@@ -19,57 +38,67 @@ repositories {
 }
 
 dependencies {
+    // Spring Boot
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-
-    // AWS
-    implementation platform('software.amazon.awssdk:bom:2.25.1')
-
-    // Jakarta
-    implementation 'jakarta.ws.rs:jakarta.ws.rs-api:3.1.0'
-
-    // Webflux
     implementation 'org.springframework:spring-webflux'
 
-    // Dynamodb
-    implementation 'software.amazon.awssdk:dynamodb:2.31.30'
-    implementation 'software.amazon.awssdk:dynamodb-enhanced:2.31.30'
+    // AWS & DynamoDB
+    implementation platform("software.amazon.awssdk:bom:${awsSdkVersion}")
+    implementation "software.amazon.awssdk:dynamodb:${dynamodbVersion}"
+    implementation "software.amazon.awssdk:dynamodb-enhanced:${dynamodbVersion}"
+
+    // Jakarta & Jersey
+    implementation "jakarta.ws.rs:jakarta.ws.rs-api:${jakartaWsVersion}"
+    implementation "org.glassfish.jersey.core:jersey-common:${jerseyVersion}"
+
+    // Documentação & Utilitários
+    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springDocVersion}"
+    implementation "io.projectreactor.netty:reactor-netty:${reactorNettyVersion}"
 
     // MapStruct
-    implementation 'org.mapstruct:mapstruct:1.6.3'
-    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
+    implementation "org.mapstruct:mapstruct:${mapstructVersion}"
+    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
 
-    // Test dependencies
+    // Testes
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'software.amazon.awssdk:apache-client'
-    testImplementation 'org.mockito:mockito-inline:5.2.0'
+    testImplementation "org.mockito:mockito-inline:${mockitoVersion}"
 
-    //Geral
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'
-    implementation 'org.glassfish.jersey.core:jersey-common:3.1.10'
-    implementation 'io.projectreactor.netty:reactor-netty:1.3.0-M2'
-
+    // Checkstyle
+    checkstyle "com.puppycrawl.tools:checkstyle:${checkstyleVersion}"
 }
 
+// Configuração do Checkstyle
+checkstyle {
+    toolVersion = checkstyleVersion
+    configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
+}
+
+// Configuração de Testes
 test {
     useJUnitPlatform()
 
     systemProperty 'spring.profiles.active', 'test'
-
     testLogging {
         events "passed", "skipped", "failed"
-        exceptionFormat "full"
+        exceptionFormat = "full"
     }
-
     maxHeapSize = '1G'
-
     jvmArgs "-javaagent:${configurations.testRuntimeClasspath.find { it.name.contains('mockito-core') }}", '-Xshare:off'
-
-    finalizedBy jacocoTestReport
 }
 
+// Configuração do Jacoco
 jacoco {
-    toolVersion = "0.8.13"
+    toolVersion = jacocoVersion
+}
+
+def excludedFiles = []
+
+tasks.register('coverage') {
+    group = 'qualidade'
+    description = 'Executa o test e cobertura do código'
+    dependsOn 'jacocoTestReport'
 }
 
 jacocoTestReport {
@@ -80,6 +109,12 @@ jacocoTestReport {
         html.required = true
         html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
     }
+
+    afterEvaluate {
+        classDirectories.setFrom(files(classDirectories.files.collect {
+            fileTree(dir: it, exclude: excludedFiles)
+        }))
+    }
 }
 
 jacocoTestCoverageVerification {
@@ -89,11 +124,10 @@ jacocoTestCoverageVerification {
             limit {
                 counter = 'LINE'
                 value = 'COVEREDRATIO'
-                minimum = 0.80  // 80% de cobertura mínima
+                minimum = 0.80
             }
             excludes = []
         }
-
         rule {
             element = 'METHOD'
             limit {
@@ -103,11 +137,7 @@ jacocoTestCoverageVerification {
             }
         }
     }
-}
 
-def excludedFiles = []
-
-jacocoTestReport {
     afterEvaluate {
         classDirectories.setFrom(files(classDirectories.files.collect {
             fileTree(dir: it, exclude: excludedFiles)
@@ -115,24 +145,19 @@ jacocoTestReport {
     }
 }
 
-jacocoTestCoverageVerification {
-    afterEvaluate {
-        classDirectories.setFrom(files(classDirectories.files.collect {
-            fileTree(dir: it, exclude: excludedFiles)
-        }))
-    }
-}
-
+// Configurações de Compilação
 tasks.withType(JavaCompile).configureEach {
     options.compilerArgs += ["-Xlint:unchecked"]
 }
 
+// Tarefa de Verificação de Cobertura
 tasks.register('checkCoverage') {
     dependsOn test
     dependsOn jacocoTestReport
     dependsOn jacocoTestCoverageVerification
 }
 
+// Configuração do Jar
 bootJar {
-    archiveFileName = 'spring-run.jar'
+    archiveFileName = finalJarName
 }
