--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,8 @@ on:
       - aws
 
 env:
-  ARTIFACT_FILE: deploy.zip
+  ARTIFACT_FILE: deploy
+  ZIP_FILE: deploy.zip
 
 jobs:
   build:
@@ -44,13 +45,17 @@ jobs:
           --include='Procfile'
           --include='.ebextensions'
           --exclude='*'
-          ./ ${{ ARTIFACT_FILE }}/
+          ./ ${{ env.ARTIFACT_FILE }}/
 
       - name: Verifica artefato
-        run: tree ${{ ARTIFACT_FILE }}/
+        run: tree ${{ env.ARTIFACT_FILE }}/
+
+      - name: Prepara artefato de deploy
+        run: |
+          zip -rq ${{ env.ZIP_FILE }} ${{ env.ARTIFACT_FILE }}
 
       - name: Upload do artefato
         uses: actions/upload-artifact@v4
         with:
           name: deploy
-          path: ${{ env.ARTIFACT_FILE }}/
+          path: ${{ env.ZIP_FILE }}
