--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,9 +41,10 @@ jobs:
       - name: Prepara artefato
         run: >
           rsync -av
+          --include='.ebextensions/'
           --include='build/'
+          --include='Dockerfile'
           --include='Procfile'
-          --include='.ebextensions'
           --exclude='*'
           ./ ${{ env.ARTIFACT_FILE }}/
 
