--- a/.github/workflows/deploy-aws-elasticbeanstalk.yml
+++ b/.github/workflows/deploy-aws-elasticbeanstalk.yml
@@ -27,6 +27,8 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: deploy
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          run-id: ${{ github.event.workflow_run.id }}
 
       - name: Configura credenciais AWS
         uses: aws-actions/configure-aws-credentials@v4
