--- a/.github/workflows/deploy-render.yml
+++ b/.github/workflows/deploy-render.yml
@@ -20,6 +20,8 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: deploy
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          run-id: ${{ github.event.workflow_run.id }}
 
       - name: Verifica artefato baixado
         run: tree ${{ env.ZIP_FILE }}/
