--- a/.github/workflows/deploy-heroku.yml
+++ b/.github/workflows/deploy-heroku.yml
@@ -23,8 +23,8 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           run-id: ${{ github.event.workflow_run.id }}
 
-      - name: Verifica artefato baixado
-        run: tree ${{ env.ZIP_FILE }}
+      - name: Artefato
+        run: unzip -l ${{ env.ZIP_FILE }} | grep -E "^.*[[:space:]]+[^/]+/?$"
 
       - name: Deployment status
         run: |
