--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,10 +3,15 @@ spring:
     activate:
       on-profile: dev
 
+  docker:
+    compose:
+      lifecycle-management: start_only
+      file: docker-compose.yml
+
 aws:
-  endpoint: http://localhost:4566
-  accessKeyId: dummy
-  secretKey: dummy
+  endpoint: '${DYNAMODB_ENDPOINT:http://localhost:4566}'
+  accessKeyId: '${AWS_ACCESS_KEY_ID:dummy}'
+  secretKey: '${AWS_SECRET_ACCESS_KEY:dummy}'
 
 springdoc:
   api-docs:
