--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,10 +6,10 @@ spring:
     name: cep-acl
 
 server:
-  port: 8081
+  port: '${SERVER_PORT:8080}'
 
 aws:
-  region: ${AWS_REGION:sa-east-1}
+  region: ${AWS_DEFAULT_REGION:sa-east-1}
 
 api:
   viacep:
