--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,48 +1,53 @@
-version: '3.8'
 services:
   dynamodb-local:
     container_name: dynamodb-local
+    command: "-jar DynamoDBLocal.jar -sharedDb -dbPath ./data"
     image: "amazon/dynamodb-local:latest"
     working_dir: /home/dynamodblocal
-    command: "-jar DynamoDBLocal.jar -sharedDb -dbPath ./data"
-    healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:4566/shell || exit 1"]
-      interval: 5s
-      timeout: 3s
-      retries: 5
-    environment:
-      - AWS_ACCESS_KEY_ID=dummy
-      - AWS_SECRET_ACCESS_KEY=dummy
-      - AWS_DEFAULT_REGION=sa-east-1
     ports:
       - "4566:8000"
     volumes:
-      - "./docker/dynamodb:/home/dynamodblocal/data"
+      - "./tmp/docker/dynamodb:/home/dynamodblocal/data"
     networks:
       - app-network
+    healthcheck:
+      test: |
+        CMD-SHELL
+        curl -X POST http://localhost:8000 \
+          -H "Content-Type: application/x-amz-json-1.0" \
+          -H "X-Amz-Target: DynamoDB_20120810.ListTables" \
+          -d "{}" || exit 1
+      interval: 5s
+      timeout: 3s
+      retries: 5
+      start_period: 10s
 
   app:
     build: .
     container_name: spring-app
-    ports:
-      - "8081:8080"
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8081/actuator/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+    depends_on:
+      dynamodb-local:
+        condition: service_healthy
     environment:
+      - SPRING_PROFILES_ACTIVE=dev
       - SERVER_PORT=8080
       # Configurações do DynamoDB local
       - AWS_ACCESS_KEY_ID=dummy
       - AWS_SECRET_ACCESS_KEY=dummy
-      - AWS_DEFAULT_REGION=us-east-1
-      - DYNAMODB_ENDPOINT=http://dynamodb-local:4566
-    depends_on:
-      dynamodb-local:
-        condition: service_healthy
+      - AWS_DEFAULT_REGION=sa-east-1
+      - DYNAMODB_ENDPOINT=http://dynamodb-local:8000
+    ports:
+      - "8081:8080"
     networks:
       - app-network
+    healthcheck:
+      test: |
+        CMD-SHELL
+        curl -X POST http://localhost:8081/actuator/health || exit 1
+      interval: 5s
+      timeout: 3s
+      retries: 5
+      start_period: 10s
 
 networks:
   app-network:
