--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     name: cep-acl
 
 server:
-  port: '${SERVER_PORT:8080}'
+  port: ${SERVER_PORT:8080}
 
 aws:
   region: ${AWS_DEFAULT_REGION:sa-east-1}
