--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
+myJavaVersion=22
 springBootVersion=3.4.5
 springDependencyManagementVersion=1.1.7
 awsSdkVersion=2.31.40
@@ -9,4 +10,5 @@ jacocoVersion=0.8.13
 mockitoVersion=5.2.0
 springDocVersion=2.8.6
 jakartaWsVersion=3.1.0
+reactorTestVersion=3.7.6
 finalJarName=spring-run.jar
