--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -2,6 +2,8 @@ spring:
   config:
     activate:
       on-profile: test
+  main:
+    lazy-initialization: true
 
 aws:
   endpoint: http://localhost:8000
